--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,12 +8,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
+        android:icon="@drawable/ic_action_action_account_balance"
+        android:label="MisCursos"
         android:theme="@style/AppTheme" >
         <activity
             android:name="org.example.micurso.app.Curso"
-            android:label="@string/app_name" >
+            android:label="" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,8 +28,14 @@
             android:name="org.example.micurso.app.SendMail"
             android:label="@string/title_activity_send_mail" >
         </activity>
+        <activity
+            android:name="org.example.micurso.app.MisCursos"
+            android:label="@string/title_activity_mis_cursos" >
+        </activity>
+        <activity
+            android:name="org.example.micurso.app.NuevoCurso"
+            android:label="@string/title_activity_nuevo_curso" >
+        </activity>
     </application>
-
-
 
 </manifest>
